# advent-of-code

./: .gitignore  README.md  pyproject.toml  run.sh
src/solutions/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/utils/: func.py  inputs.py  iterables.py
