[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions for the Advent of Code 2022 challenges"
authors = ["David Filat <david.filat@eurasiaprecept.org>"]

[tool.poetry.dependencies]
python = "^3.11"
toolz = "^0.12.0"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
